--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY="AIzaSyAFIlFaTbBLqLaqb5shSQLwLby7G0fYUAw"
-AUTH_DOMAIN="react-coder-543d5.firebaseapp.com"
-PROJECT_ID="react-coder-543d5"
-STORAGE_BUCKET="react-coder-543d5.appspot.com"
-MESSAGING_SENDER_ID="807981284978"
-APP_ID="1:807981284978:web:e1f2de88635a32fe678ceb"
+REACT_APP_API_KEY="AIzaSyAFIlFaTbBLqLaqb5shSQLwLby7G0fYUAw"
+REACT_APP_AUTH_DOMAIN="react-coder-543d5.firebaseapp.com"
+REACT_APP_PROJECT_ID="react-coder-543d5"
+REACT_APP_STORAGE_BUCKET="react-coder-543d5.appspot.com"
+REACT_APP_MESSAGING_SENDER_ID="807981284978"
+REACT_APP_APP_ID="1:807981284978:web:e1f2de88635a32fe678ceb"
